# claudima

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  claudir.example.json  monitor.sh
experiments/: test_bidirectional.py  test_claude_cli.py  test_claude_tools.py  test_no_tools.py
scripts/: fetch_history.py  healthcheck.sh  setup-voice-tests.sh  wait-for-feedback.sh  xtts_server.py
specs/: CHATBOT.md
src/: classifier.rs  claude.rs  config.rs  lib.rs  main.rs  prefilter.rs  telegram_log.rs
src/chatbot/: claude_code.rs  context.rs  database.rs  debounce.rs  docx.rs  engine.rs  gemini.rs  message.rs  mod.rs  peer.rs  reminders.rs  signals.rs  telegram.rs  tests.rs  tools.rs  tts.rs  whisper.rs
tests/: voice_transcription.rs
