[package]
name = "claudima"
version = "0.1.0"
edition = "2024"

[features]
integ_test = []

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = "0.22.1"
whisper-rs = "0.15"
rusqlite = { version = "0.33", features = ["bundled"] }
urlencoding = "2.1"
zip = "2.2"
cron = "0.15"
chrono-tz = "0.10.4"

[dev-dependencies]
tempfile = "3"
